WT-14332: Fix WDialog content being cut off
When having a WTableView in a WDialog, the content of the content would
be cut off if the width of the WDialog was smaller than the width of the
WTableView.

This was solved by setting the width of the WDialog's content container
to 100%. While this is not ideal as the content container can be
accessed via WDialog::contents(), there should also be no sensible
reason to choose to do so over changing the width of the whole WDialog.

--- a/resources/themes/bootstrap/2/wt.less
+++ b/resources/themes/bootstrap/2/wt.less
@@ -68,7 +68,7 @@
  * Custom collapse nav support
  */
 .navbar .nav-collapse {
-  display: block !important; 
+  display: block !important;
 }
 
 @media (max-width: 979px) {
@@ -148,6 +148,13 @@
   .modal-body {
     max-height: none; /* override max-height: 400px in Bootstrap */
   }
+
+  /*
+   * Fix dialog content being cut off see #14332
+   */
+  .Wt-fill-width > .modal-body {
+    width: 100%;
+  }
 }
 
 /*
@@ -188,7 +195,7 @@
   background: url(../splitter-h.png) no-repeat 50% 50% #EEE;
 }
 
-.Wt-hsh2, .Wt-vsh2, 
+.Wt-hsh2, .Wt-vsh2,
 .Wt-vrh2:hover, .Wt-hrh2:hover {
   background-color: @grayLight;
 }
@@ -727,7 +734,7 @@ body.Wt-rtl {
 
   .Wt-plaintable .Wt-tv-br {
     border-right: 0;
-  }  
+  }
 
   .Wt-tv-contents .Wt-tv-c, .Wt-plaintable td, .Wt-plaintable th {
     border-right: 1px solid @tableBorder;
@@ -1098,7 +1105,7 @@ body.Wt-rtl {
   span:hover {
     color: @white;
     background-color: @linkColor;
-  } 
+  }
 }
 
 /*
