--- a/resources/themes/bootstrap/3/wt.less
+++ b/resources/themes/bootstrap/3/wt.less
@@ -138,6 +138,13 @@
     }
   }
 
+  /*
+   * Fix dialog content being cut off see #14332
+   */
+  .Wt-fill-width > .modal-body {
+    width: 100%;
+  }
+
   .modal-body {
     .modal-footer {
       margin: 0px -15px -15px;
@@ -180,7 +187,7 @@
   background: url(../splitter-h.png) no-repeat 50% 50% #EEE;
 }
 
-.Wt-hsh2, .Wt-vsh2, 
+.Wt-hsh2, .Wt-vsh2,
 .Wt-vrh2:hover, .Wt-hrh2:hover {
   background-color: @gray-light;
 }
@@ -1073,7 +1080,7 @@ body.Wt-rtl {
   span:hover {
     color: @component-active-color;
     background-color: @link-color;
-  } 
+  }
 }
 
 /*
